--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,30 @@
+.nav-bar {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  top: 20px;
+  left: 20px;
+}
+.title{
+  font-family: 'Passion One', cursive;
+  color: white;
+  font-size: 3em;
+}
+.main{
+  flex: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center
+}
+
 .App {
-  text-align: center;
+  overflow-y: hidden;
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  padding: 20px;
+  height: 60px;
 }
 
 .App-header {
@@ -22,7 +42,101 @@
   font-size: large;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.jumbotron {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  flex: 1;
+  width: 100vw;
+
+}
+
+.describe-me {
+text-align: center
+}
+
+.linethrough {
+  text-decoration:line-through;
+  color: #e0e8ef;
+}
+
+.questions {
+  padding-bottom: 20px;
+}
+
+.Checkout {
+  margin: 0 auto;
+  max-width: 800px;
+  box-sizing: border-box;
+  padding: 0 5px;
+}
+label {
+  color: #6b7c93;
+  font-weight: 300;
+  letter-spacing: 0.025em;
+}
+button {
+  white-space: nowrap;
+  border: 0;
+  outline: 0;
+  display: inline-block;
+  height: 40px;
+  line-height: 40px;
+  padding: 0 14px;
+  box-shadow: 0 4px 6px rgba(50, 50, 93, .11), 0 1px 3px rgba(0, 0, 0, .08);
+  color: #fff;
+  border-radius: 4px;
+  font-size: 15px;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 0.025em;
+  background-color: #6772e5;
+  text-decoration: none;
+  -webkit-transition: all 150ms ease;
+  transition: all 150ms ease;
+  margin-top: 10px;
+}
+form {
+}
+.StripeElement {
+  display: block;
+  margin: 10px 0 20px 0;
+  max-width: 500px;
+  padding: 10px 14px;
+  box-shadow: rgba(50, 50, 93, 0.14902) 0px 1px 3px, rgba(0, 0, 0, 0.0196078) 0px 1px 0px;
+  border-radius: 4px;
+  background: white;
+  margin-left: auto;
+  margin-right: auto;
+}
+.StripeElement--focus {
+  box-shadow: rgba(50, 50, 93, 0.109804) 0px 4px 6px, rgba(0, 0, 0, 0.0784314) 0px 1px 3px;
+  -webkit-transition: all 150ms ease;
+  transition: all 150ms ease;
+}
+.StripeElement.PaymentRequestButton {
+  padding: 0;
+}
+
+.nodisplay {
+  display: none;
+}
+
+.pointer {
+  cursor: pointer;
+}
+
+.card {
+  padding: 30px;
+  align-self: center;
+  background-color: white;
+  margin-left: auto;
+  margin-right: auto;
+  width: 60vw;
+  border-radius: 15px;
+  text-align: center;
+  color: #767676;
+  height: 100vh;
 }
