--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Nunito Sans', sans-serif;
+  background-image: url("./assets/pollstabackground4.png");
+  color: white;
 }
