--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,8 @@
 }
 
 .App {
-  overflow-y: hidden;
+  overflow:hidden;
+  position: relative;
 }
 
 .App-logo {
@@ -129,9 +130,9 @@ form {
 }
 
 .card {
-  padding: 30px;
+  padding: 35px;
   align-self: center;
-  background-color: white;
+  background-color: #fdfff2;
   margin-left: auto;
   margin-right: auto;
   width: 60vw;
