--- a/src/App.css
+++ b/src/App.css
@@ -1,194 +1,185 @@
 .nav-bar {
-  position: absolute;
-  display: flex;
-  align-items: center;
-  top: 20px;
-  left: 20px;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    top: 20px;
+    left: 20px;
 }
-.title{
-  font-family: 'Passion One', cursive;
-  color: white;
-  font-size: 3em;
+
+.title {
+    font-family: 'Passion One', cursive;
+    color: white;
+    font-size: 3em;
 }
-.main{
-  flex: 2;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center
+
+.main {
+    flex: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center
 }
 
 .App {
-  overflow:hidden;
-  position: relative;
+    overflow: hidden;
+    position: relative;
+
 }
 
 .App-logo {
-  padding: 20px;
-  height: 60px;
+    padding: 20px;
+    height: 60px;
 }
 
 .App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+    background-color: #222;
+    height: 150px;
+    padding: 20px;
+    color: white;
 }
 
 .App-title {
-  font-size: 1.5em;
+    font-size: 1.5em;
 }
 
 .App-intro {
-  font-size: large;
+    font-size: large;
 }
 
 .jumbotron {
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  flex: 1;
-  width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    flex: 1;
+    width: 100vw;
 
 }
 
 .describe-me {
-text-align: center;
+    text-align: center;
+    color: white;
 }
 
 .linethrough {
-  text-decoration:line-through;
-  color: #fbffb8;
+    text-decoration: line-through;
+    color: #fbffb8;
 
-}
-
-.questions {
-  padding-bottom: 20px;
 }
 
 .Checkout {
-  margin: 0 auto;
-  max-width: 800px;
-  box-sizing: border-box;
-  padding: 0 5px;
+    margin: 0 auto;
+    max-width: 800px;
+    box-sizing: border-box;
+    padding: 0 5px;
 }
+
 label {
-  color: #6b7c93;
-  font-weight: 300;
-  letter-spacing: 0.025em;
+    color: #6b7c93;
+    font-weight: 300;
+    letter-spacing: 0.025em;
 }
-button {
-  white-space: nowrap;
-  border: 0;
-  outline: 0;
-  display: inline-block;
-  height: 40px;
-  line-height: 40px;
-  padding: 0 14px;
-  box-shadow: 0 4px 6px rgba(50, 50, 93, .11), 0 1px 3px rgba(0, 0, 0, .08);
-  color: #fff;
-  border-radius: 4px;
-  font-size: 15px;
-  font-weight: 600;
-  text-transform: uppercase;
-  letter-spacing: 0.025em;
-  background-color: #6772e5;
-  text-decoration: none;
-  -webkit-transition: all 150ms ease;
-  transition: all 150ms ease;
-  margin-top: 10px;
-}
-form {
-}
+
 .StripeElement {
-  display: block;
-  margin: 10px 0 20px 0;
-  max-width: 500px;
-  padding: 10px 14px;
-  box-shadow: rgba(50, 50, 93, 0.14902) 0px 1px 3px, rgba(0, 0, 0, 0.0196078) 0px 1px 0px;
-  border-radius: 4px;
-  background: white;
-  margin-left: auto;
-  margin-right: auto;
+    display: block;
+    margin: 10px 0 20px 0;
+    max-width: 500px;
+    padding: 10px 14px;
+    box-shadow: rgba(50, 50, 93, 0.14902) 0px 1px 3px, rgba(0, 0, 0, 0.0196078) 0px 1px 0px;
+    border-radius: 4px;
+    background: white;
+    margin-left: auto;
+    margin-right: auto;
 }
+
 .StripeElement--focus {
-  box-shadow: rgba(50, 50, 93, 0.109804) 0px 4px 6px, rgba(0, 0, 0, 0.0784314) 0px 1px 3px;
-  -webkit-transition: all 150ms ease;
-  transition: all 150ms ease;
+    box-shadow: rgba(50, 50, 93, 0.109804) 0px 4px 6px, rgba(0, 0, 0, 0.0784314) 0px 1px 3px;
+    -webkit-transition: all 150ms ease;
+    transition: all 150ms ease;
 }
+
 .StripeElement.PaymentRequestButton {
-  padding: 0;
+    padding: 0;
 }
 
 .nodisplay {
-  display: none;
+    display: none;
 }
 
 .pointer {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 .card {
-  padding: 35px;
-  align-self: center;
-  background-color: white;
-  margin-left: auto;
-  margin-right: auto;
-  width: 60vw;
-  border-radius: 15px;
-  text-align: center;
-  color: #767676;
-  height: 100vh;
+    padding: 35px;
+    align-self: center;
+    background-color: white;
+    margin-left: auto;
+    margin-right: auto;
+    width: 60vw;
+    border-radius: 15px;
+    text-align: center;
+    color: #767676;
+    height: 100vh;
 }
 
 .example-enter {
-  opacity: 0.01;
+    opacity: 0.01;
 }
 
 .example-enter.example-enter-active {
-  opacity: 1;
-  transition: opacity 500ms ease-in;
+    opacity: 1;
+    transition: opacity 500ms ease-in;
 }
 
 .example-leave {
-  opacity: 1;
+    opacity: 1;
 }
 
 .example-leave.example-leave-active {
-  opacity: 0.01;
-  transition: opacity 300ms ease-in;
+    opacity: 0.01;
+    transition: opacity 300ms ease-in;
 }
 
-.paragraph p{
-  -webkit-margin-before: 0.5em;
-  -webkit-margin-after: 0.5em;
+.paragraph p {
+    -webkit-margin-before: 0.5em;
+    -webkit-margin-after: 0.5em;
 }
 
 .inputWrapper {
-  padding: 10px 14px;
-  -webkit-box-shadow: rgba(50, 50, 93, 0.14902) 0px 1px 3px, rgba(0, 0, 0, 0.0196078) 0px 1px 0px;
-  box-shadow: rgba(50, 50, 93, 0.14902) 0px 1px 3px, rgba(0, 0, 0, 0.0196078) 0px 1px 0px;
-  border-radius: 4px;
-  background: white;
-  margin-left: auto;
-  margin-right: auto;
+    padding: 10px 14px;
+    -webkit-box-shadow: rgba(50, 50, 93, 0.14902) 0px 1px 3px, rgba(0, 0, 0, 0.0196078) 0px 1px 0px;
+    box-shadow: rgba(50, 50, 93, 0.14902) 0px 1px 3px, rgba(0, 0, 0, 0.0196078) 0px 1px 0px;
+    border-radius: 4px;
+    background: white;
+    margin-left: auto;
+    margin-right: auto;
+    min-width: 300px;
 }
 
 .input {
-  background-color: transparent;
-  border: none;
-  display: block;
-  font-family: sans-serif;
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  font-size: 18px;
-  line-height: 1.2em;
-  height: 1.2em;
-  color: #757575
+    background-color: transparent;
+    border: none;
+    display: block;
+    font-family: sans-serif;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    font-size: 18px;
+    line-height: 1.2em;
+    height: 1.2em;
 }
+
 *:focus {
-  outline: 0;
+    outline: 0;
+}
+
+.questions {
+    margin-top: 0;
+    margin-bottom: 30px;
+}
+
+h3 {
+    -webkit-margin-after: 0
 }
